<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <name.oho.baking.ui.receipt.StepRecyclerView
        android:id="@+id/rv_steps"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </name.oho.baking.ui.receipt.StepRecyclerView>

</android.support.constraint.ConstraintLayout>