<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context="name.oho.baking.MainActivity">

    <name.oho.baking.ui.main.ReceiptOverviewRecyclerView
        android:id="@+id/rv_receipts"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </name.oho.baking.ui.main.ReceiptOverviewRecyclerView>

    <ProgressBar
        android:id="@+id/pg_loadingIndicator"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>
